--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -20,11 +20,33 @@ html, body {
     background-color: @color-bromic-background;
 }
 
+
 #app {
     width: 100%;
     height: 100%;
 
     display: flex;
+
+    .side {
+        flex: none;
+        display: flex;
+        flex-direction: column;
+
+        width: 250px;
+    }
+
+    .main {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
 }
 
-@import "./viewLayout/loader.less";
+@import "viewLayout/loader.less";
+@import "viewLayout/header.less";
+@import "viewLayout/blogInfo.less";
+@import "viewLayout/paperList.less";
+@import "viewLayout/title.less";
+@import "viewLayout/editor.less";
+@import "viewLayout/dialog.less";
+@import "viewLayout/tools.less";
