--- a/src/styles/viewLayout/loader_animation.less
+++ b/src/styles/viewLayout/loader_animation.less
@@ -1,55 +1,59 @@
 // Spinner Animation
-.spinner {
-    margin: 20px auto;
-    width: 40px;
-    height: 40px;
-    position: relative;
-    transform: rotateZ(45deg);
 
-    &-cube {
-        float: left;
-        width: 50%;
-        height: 50%;
+.loader {
+    .spinner {
+        margin: 20px auto;
+        width: 40px;
+        height: 40px;
         position: relative;
-        transform: scale(1.1);
+        transform: rotateZ(45deg);
 
-        &:before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #EEE;
-            animation: spinnerAnimation 2.4s infinite linear both;
-            transform-origin: 100% 100%;
+        &-cube {
+            float: left;
+            width: 50%;
+            height: 50%;
+            position: relative;
+            transform: scale(1.1);
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #EEE;
+                animation: spinnerAnimation 2.4s infinite linear both;
+                transform-origin: 100% 100%;
+            }
         }
-    }
 
-    &-cube__2 {
-        transform: scale(1.1) rotateZ(90deg);
+        &-cube__2 {
+            transform: scale(1.1) rotateZ(90deg);
 
-        &:before {
-            animation-delay: 0.3s;
+            &:before {
+                animation-delay: 0.3s;
+            }
         }
-    }
 
-    &-cube__3 {
-        transform: scale(1.1) rotateZ(180deg);
+        &-cube__3 {
+            transform: scale(1.1) rotateZ(180deg);
 
-        &:before {
-            animation-delay: 0.6s;
+            &:before {
+                animation-delay: 0.6s;
+            }
         }
-    }
 
-    &-cube__4 {
-        transform: scale(1.1) rotateZ(270deg);
+        &-cube__4 {
+            transform: scale(1.1) rotateZ(270deg);
 
-        &:before {
-            animation-delay: 0.9s;
+            &:before {
+                animation-delay: 0.9s;
+            }
         }
     }
 }
+
 
 @-webkit-keyframes spinnerAnimation {
     0%, 10% {
