[src/styles] add font icon('font awesome')

--- a/src/styles/viewLayout/loader_animation.less
+++ b/src/styles/viewLayout/loader_animation.less
@@ -68,7 +68,7 @@
         }
 }
 
-@keyframes sk-foldCubeAngle {
+@keyframes spinnerAnimation {
     0%, 10% {
         transform: perspective(140px) rotateX(-180deg);
         opacity: 0;
