--- a/src/styles/viewLayout/paperList.less
+++ b/src/styles/viewLayout/paperList.less
@@ -13,10 +13,7 @@
 
         &-btn {
             flex: 1;
-            display: flex;
-
-            align-items: center;
-            justify-content: center;
+            display: block;
 
             margin: 0;
             outline: 0;
@@ -41,6 +38,7 @@
                 font-family: @font-default;
                 padding-left: 4px;
                 content: "New Paper";
+                vertical-align: text-top;
             }
         }
     }
