--- a/src/styles/_variable.less
+++ b/src/styles/_variable.less
@@ -55,3 +55,17 @@
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
 }
+
+@import "../assets/fonts/font-awesome/font-awesome.min.css";
+
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('../assets/fonts/font-awesome/fontawesome-webfont.eot');
+    src: url('../assets/fonts/font-awesome/fontawesome-webfont.eot') format('embedded-opentype'),
+    url('../assets/fonts/font-awesome/fontawesome-webfont.woff2') format('woff2'),
+    url('../assets/fonts/font-awesome/fontawesome-webfont.woff') format('woff'),
+    url('../assets/fonts/font-awesome/fontawesome-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal
+}
+
