--- a/src/styles/viewLayout/editor.less
+++ b/src/styles/viewLayout/editor.less
@@ -154,6 +154,8 @@
                 font-size: inherit;
                 line-height: 1;
                 padding: 4px 0;
+                vertical-align: text-top;
+                color: @color-material-grey-700;
             }
 
             p {
